# crude_tensorrt

./: CMakeLists.txt  README.md  inference_in_trt.cpp  inference_in_trt.hpp
cmake/: FindTensorRT.cmake
src/: inference_in_trt.cpp  inference_in_trt.hpp  main.cpp
src/common/: buffers.h  common.h
